Интеграция системы зависимостей JavaFX Изменено:   pom.xml Изменено:   src/main/java/mente/nova/mente_nova/MenteNovaApplication.java Добавлен файл:   src/main/java/mente/nova/mente_nova/SubjectsApplication.java Перемещён:    src/main/java/mente/nova/mente_nova/minio/MinioConfig.java -> src/main/java/mente/nova/mente_nova/config/MinioConfig.java Добавлен файл:   src/main/java/mente/nova/mente_nova/controller/MainController.java Добавлен файл:   src/main/java/mente/nova/mente_nova/controller/SubjectsController.java Изменено:   src/main/java/mente/nova/mente_nova/minio/MinioApplication.java Изменено:   src/main/java/mente/nova/mente_nova/minio/MinioServer.java Добавлен файл:   src/main/java/mente/nova/mente_nova/view/MainApp.java